# violence-detection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  church.py  download.py  hello.py  pyproject.toml  run.py  workstation.ipynb
.github/workflows/: test.yml
tests/: __init__.py
violence_detection/: README.md  __init__.py
violence_detection/cli/: __init__.py  commands.py  main.py  preprocessing.py
violence_detection/inference/: __init__.py  detector.py
violence_detection/models/: __init__.py  factory.py  layers.py  transformer.py  violence_detection.py
violence_detection/utils/: __init__.py  train.py  training.py
