[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "violence_detection"
version = "0.1.0"
description = "Violence Detection in Philippine Context with Limited Compute Resources"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Marc Reyes", email = "marc.reyes@angkas.com" }
]
dependencies = [
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "opencv-python>=4.5.1",
    "numpy>=1.19.5",
    "pandas>=1.2.3",
    "scikit-learn>=0.24.1",
    "matplotlib>=3.3.4",
    "seaborn>=0.11.1",
    "tqdm>=4.59.0",
    "onnx>=1.9.0",
    "onnxruntime>=1.7.0",
    "requests>=2.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=violence_detection --cov-report=term-missing"
